--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,34 @@
 <html>
 
 <head>
-    <link rel="icon" href="data:,">
+    <link rel="icon" href="data:," />
     <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
-
 </head>
 
 <body>
+    <div id="selection"></div>
     <video id="video" class="video-js" preload="auto" width="640" height="264" controls>
-        <source type="application/x-mpegURL" src="http://192.168.1.100:5000/play">
+        <source type="application/x-mpegURL" src="http://192.168.1.103:5000/videos/2021-07-28_20-22-23.m8u3" />
     </video>
 
     <script src="https://unpkg.com/video.js/dist/video.js"></script>
     <script src="https://unpkg.com/@videojs/http-streaming/dist/videojs-http-streaming.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/cesiumjs/1.78/Build/Cesium/Cesium.js"></script>
     <script>
-        var player = videojs('video', { 'liveui': true });
+        let player = videojs("video", { liveui: true });
+        let boxes = document.getElementById("selection");
+
+        let request = new XMLHttpRequest();
+        request.open('GET', 'http://192.168.1.103:5000/list');
+        request.responseType = 'json';
+        request.send();
+
+        request.onload = function () {
+            const datas = request.response;
+            console.log(datas);
+        }
+
+
     </script>
 </body>
 
