--- a/templates/loading.html
+++ b/templates/loading.html
@@ -4,11 +4,6 @@
     <!-- <meta http-equiv="refresh" content="2" /> -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
-    <link
-      href="https://unpkg.com/@videojs/themes@1/dist/city/index.css"
-      rel="stylesheet"
-    />
     <link href="http://192.168.1.103:5000/tailwind.css" rel="stylesheet" />
   </head>
 
@@ -76,13 +71,13 @@
       <!-- video selection list -->
       <div
         id="selection"
-        class="grid grid-cols-1 gap-7 md:pt-0 w-full relative"
+        class="z-0 grid grid-cols-1 gap-7 md:pt-0 w-full relative"
       ></div>
     </div>
 
     <script src="https://unpkg.com/video.js/dist/video.js"></script>
     <script src="https://unpkg.com/@videojs/http-streaming/dist/videojs-http-streaming.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/cesiumjs/1.78/Build/Cesium/Cesium.js"></script>
-    <script src="http://192.168.1.103:5000/script.js"></script>
+    <script src="http:192.168.1.103:5000/script.js"></script>
   </body>
 </html>
