--- a/templates/tailwind.css
+++ b/templates/tailwind.css
@@ -595,16 +595,16 @@ video {
   position: relative;
 }
 
-.z-0 {
-  z-index: 0;
-}
-
 .grid {
   display: grid;
 }
 
 .h-auto {
   height: auto;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .h-16 {
@@ -631,10 +631,6 @@ video {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.place-items-start {
-  place-items: start;
-}
-
 .place-items-center {
   place-items: center;
 }
@@ -645,16 +641,6 @@ video {
 
 .gap-7 {
   gap: 1.75rem;
-}
-
-.divide-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
-}
-
-.self-start {
-  align-self: flex-start;
 }
 
 .overflow-hidden {
@@ -673,26 +659,8 @@ video {
   border-radius: 1rem;
 }
 
-.border {
-  border-width: 1px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
-}
-
-.border-gray-600 {
-  --tw-border-opacity: 1;
-  border-color: rgba(75, 85, 99, var(--tw-border-opacity));
-}
-
-.border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }
 
 .border-gray-300 {
@@ -700,24 +668,14 @@ video {
   border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
 
-.bg-green-300 {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
-}
-
-.bg-\[\#0099ff\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(0, 153, 255, var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -737,8 +695,16 @@ video {
   padding: 1.25rem;
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
+.pb-1\.5 {
+  padding-bottom: 0.375rem;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .pl-0\.5 {
@@ -749,30 +715,20 @@ video {
   padding-left: 0px;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
+.pl-5 {
+  padding-left: 1.25rem;
 }
 
-.pb-1 {
-  padding-bottom: 0.25rem;
+.pl-10 {
+  padding-left: 2.5rem;
 }
 
-.pb-1\.5 {
-  padding-bottom: 0.375rem;
+.text-left {
+  text-align: left;
 }
 
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .text-xl {
@@ -780,16 +736,37 @@ video {
   line-height: 1.75rem;
 }
 
-.font-medium {
-  font-weight: 500;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
-.font-semibold {
-  font-weight: 600;
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
 
 .shadow-md {
@@ -862,5 +839,9 @@ video {
 
   .md\:pt-0 {
     padding-top: 0px;
+  }
+
+  .md\:pl-5 {
+    padding-left: 1.25rem;
   }
 }
