--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
       href="https://unpkg.com/@videojs/themes@1/dist/city/index.css"
       rel="stylesheet"
     />
-    <link href="http://192.168.1.103:5000/tailwind.css" rel="stylesheet" />
+    <link href="/tailwind.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -54,24 +54,11 @@
         >
           <source
             type="application/x-mpegURL"
-            src="http://192.168.1.103:5000/videos/2021-07-28_20-22-23.m8u3"
+            src="/videos/2021-07-28_20-22-23.m8u3"
           />
         </video>
         <!-- video title -->
-        <div
-          id="title"
-          class="
-            pt-4
-            font-semibold
-            text-xl
-            pl-0.5
-            overflow-hidden
-            w-[85vw]
-            md:w-full
-          "
-        >
-          Choose a video
-        </div>
+        <div id="title" class="video-title">Choose a video</div>
       </div>
       <!-- video selection list -->
       <div
@@ -83,6 +70,6 @@
     <script src="https://unpkg.com/video.js/dist/video.js"></script>
     <script src="https://unpkg.com/@videojs/http-streaming/dist/videojs-http-streaming.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/cesiumjs/1.78/Build/Cesium/Cesium.js"></script>
-    <script src="http://192.168.1.103:5000/script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
