--- a/templates/styles.css
+++ b/templates/styles.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+.video-title {
+  @apply pt-4
+  font-semibold
+  text-xl
+  pl-0.5
+  overflow-hidden
+  w-[85vw]
+  md:w-full;
+}
+
+.box {
+  @apply bg-white shadow-md rounded-lg overflow-hidden h-20 pl-10 md:pl-5 text-left;
+}
+
 @layer utilities {
   .fullhd {
     aspect-ratio: 16 / 9;
