--- a/nginx/templates/index.html
+++ b/nginx/templates/index.html
@@ -41,14 +41,8 @@
             overflow-hidden
             shadow-md
           "
-          preload="auto"
           controls
-        >
-          <source
-            type="application/x-mpegURL"
-            src="/videos/2021-07-28_20-22-23.m8u3"
-          />
-        </video>
+        ></video>
         <!-- video title -->
         <div id="title" class="video-title">Choose a video</div>
       </div>
@@ -59,9 +53,8 @@
       ></div>
     </div>
 
-    <script src="https://unpkg.com/video.js/dist/video.js"></script>
-    <script src="https://unpkg.com/@videojs/http-streaming/dist/videojs-http-streaming.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/cesiumjs/1.78/Build/Cesium/Cesium.js"></script>
+    <script src="/video.js"></script>
+    <script src="/videojs-http-streaming.js"></script>
     <script src="/script.js"></script>
   </body>
 </html>
