--- a/nginx/templates/styles.css
+++ b/nginx/templates/styles.css
@@ -33,7 +33,7 @@
 .box {
   @apply bg-white shadow-md
   rounded-lg overflow-hidden
-  grid grid-cols-1 place-items-center
+  grid grid-cols-1 place-items-start
   hover:-translate-y-1 transition active:bg-gray-400 hover:ring hover:ring-pink-600;
 }
 
