--- a/nginx/templates/tailwind.css
+++ b/nginx/templates/tailwind.css
@@ -600,10 +600,17 @@ video {
 .container {
 	width: 100%;
 }
+.\!container {
+	width: 100% !important;
+}
 @media (min-width: 640px) {
 
 	.container {
 		max-width: 640px;
+	}
+
+	.\!container {
+		max-width: 640px !important;
 	}
 }
 @media (min-width: 768px) {
@@ -611,11 +618,19 @@ video {
 	.container {
 		max-width: 768px;
 	}
+
+	.\!container {
+		max-width: 768px !important;
+	}
 }
 @media (min-width: 1024px) {
 
 	.container {
 		max-width: 1024px;
+	}
+
+	.\!container {
+		max-width: 1024px !important;
 	}
 }
 @media (min-width: 1280px) {
@@ -623,11 +638,19 @@ video {
 	.container {
 		max-width: 1280px;
 	}
+
+	.\!container {
+		max-width: 1280px !important;
+	}
 }
 @media (min-width: 1536px) {
 
 	.container {
 		max-width: 1536px;
+	}
+
+	.\!container {
+		max-width: 1536px !important;
 	}
 }
 .sr-only {
@@ -1828,7 +1851,7 @@ video {
 .box {
 	display: grid;
 	grid-template-columns: repeat(1, minmax(0, 1fr));
-	place-items: center;
+	place-items: start;
 	overflow: hidden;
 	border-radius: 0.5rem;
 	--tw-bg-opacity: 1;
